--- a/src/Components/Applications/_Applications.scss
+++ b/src/Components/Applications/_Applications.scss
@@ -15,8 +15,8 @@
   border: 1px solid black;
   border-radius: 5px;
   margin: 10px;
-  padding: 20px 30px;
-  max-width: 300px;
+  padding: 20px;
+  max-width: 350px;
   background: $backgroundItems;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
 }
@@ -46,4 +46,31 @@
   color: $accentColor;
   font-weight: bold;
   margin-left: 10px;
+}
+
+.applications svg {
+  stroke: #000;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
+}
+
+.applications .inprogress svg {
+  stroke: blue;
+}
+
+.applications .open svg {
+  stroke: red;
+}
+
+.applications .closed svg {
+  stroke: green;
+}
+
+.applications .button-small {
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  padding: 2px;
 }
