--- a/src/Components/Applications/_Applications.scss
+++ b/src/Components/Applications/_Applications.scss
@@ -3,20 +3,21 @@
   @extend %bugs-shared;
 }
 
-.applications ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+.applications {
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
-.applications li {
+.applications-list {
+  display: grid;
+  grid-gap: 10px;
+  align-items: center;
+  justify-content: center;
+
   border: 1px solid black;
   border-radius: 5px;
   margin: 10px;
-  padding: 20px;
-  max-width: 350px;
+  padding: 10px 20px;
   background: $backgroundItems;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
 }
@@ -26,11 +27,15 @@
 }
 
 .applications-list__name {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: bold;
   color: $textColor;
   text-transform: uppercase;
-  margin-bottom: 20px;
+}
+
+.applications-list__name img {
+  width: 15px;
+  height: auto;
 }
 
 .applications-list__counts {
@@ -39,7 +44,6 @@
   padding: 10px;
   background-color: white;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
-  margin: 10px;
 }
 
 .applications-list__counts-number {
@@ -73,4 +77,78 @@
   height: 30px;
   margin-left: 10px;
   padding: 2px;
+}
+
+.applications-list__view .button {
+  width: 100px;
+}
+
+@media (max-width: 720px) {
+  .applications-list {
+    grid-template-columns: 100%;
+  }
+}
+
+@media (min-width: 721px) {
+  .applications-list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .applications-list__name {
+    grid-row: 1;
+    grid-column: 1 / 4;
+  }
+
+  .applications-list__counts {
+    grid-row: 2;
+  }
+
+  .applications-list__counts .count-open {
+    grid-column: 1 / 2;
+  }
+
+  .applications-list__counts .count-inProgress {
+    grid-column: 2 / 3;
+  }
+
+  .applications-list__counts .count-closed {
+    grid-column: 3 / 4;
+  }
+
+  .applications-list__view {
+    grid-row: 3;
+    grid-column: 1 / 4;
+  }
+}
+
+@media (min-width: 801px) {
+  .applications-list {
+    grid-template-columns: 2fr 2fr 2fr 2fr 1fr;
+  }
+
+  .applications-list__name {
+    grid-row: 1;
+    grid-column: 1 / 2;
+  }
+
+  .applications-list__counts {
+    grid-row: 1;
+  }
+
+  .applications-list__counts .count-open {
+    grid-column: 2 / 3;
+  }
+
+  .applications-list__counts .count-inProgress {
+    grid-column: 3 / 4;
+  }
+
+  .applications-list__counts .count-closed {
+    grid-column: 4 / 5;
+  }
+
+  .applications-list__view {
+    grid-row: 1;
+    grid-column: 5 / 6;
+  }
 }
