--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,7 @@ $background: #F2F2F2;
 $backgroundToolbar: silver;
 $backgroundSideDrawer: white;
 $backgroundItems: lightgray;
+$backgroundButtons: #D6EAF8 ;
 
 $textColor: black;
 $textHoverColor: #4157a6;
